<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Turistics</string>
    <string name="title_activity_main">Turistics</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu -->
    <string name="action_refresh">Actualitza</string>
    <string name="action_edit">Edició</string>
    <string name="action_delete">Esborrar</string>

    <!-- Header -->
    <string name="title_activity_touristic_place_insert">Afegir</string>
    <string name="title_activity_touristic_place_edit">Edició</string>

    <string name="title_activity_touristic_place_favorite">Favorits</string>
    <string name="place_name">Nom lloc</string>
    <string name="place_image_url">URL Imatge</string>
    <string name="place_aperture_time">Hora d\'obertura</string>
    <string name="place_price">Preu</string>
    <string name="place_address">Adreça</string>
    <string name="place_description">Descripció</string>

    <!--Add new touristic place -->
    <string name="place_not_added">No s\'ha pogut guardar el lloc</string>
    <string name="place_added">S\'ha pogut guardar el lloc</string>


    <!-- Globla symbols -->
    <string name="currency" translatable="false">%1$s (%2$s)</string>
</resources>