<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cat.tomasgis.apps.formacio.android.initialapp.TouristicPlaceInsertActivity"
    >


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tourist_insert_header">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tourist_insert_image"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/tourist_insert_favorite"
                    android:src="@drawable/ic_star_border"
                    android:tint="@color/colorAccent" />
            </RelativeLayout>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tourist_insert_image_name"
                android:layout_below="@+id/tourist_insert_header"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:hint="@string/place_image_url"
                android:selectAllOnFocus="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tourist_insert_name"
                android:layout_below="@+id/tourist_insert_image_name"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:hint="@string/place_name" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tourist_insert_aperture"
                android:layout_below="@+id/tourist_insert_name"
                android:layout_alignEnd="@+id/tourist_insert_name"
                android:layout_alignParentStart="true"
                android:hint="@string/place_aperture_time" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tourist_insert_price"
                android:layout_below="@+id/tourist_insert_aperture"
                android:layout_alignParentStart="true"
                android:inputType="numberDecimal"
                android:hint="@string/place_price"
                android:layout_toStartOf="@+id/tourist_insert_currency"
                android:layout_alignEnd="@+id/tourist_insert_rate" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/tourist_insert_place"
                android:layout_below="@+id/tourist_insert_price"
                android:layout_alignParentStart="true"
                android:hint="@string/place_address"
                android:layout_alignParentEnd="true" />

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:name="com.google.android.gms.maps.MapFragment"
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/tourist_insert_place"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/tourist_insert_place"/>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tourist_insert_rate"
                android:numStars="5"
                android:rating="0.0"
                android:stepSize="0.5"
                android:layout_below="@+id/map"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/tourist_insert_description"
                android:layout_below="@+id/tourist_insert_rate"
                android:hint="@string/place_description"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="-- (-)"
                android:id="@+id/tourist_insert_currency"
                android:layout_alignBaseline="@+id/tourist_insert_price"
                android:layout_alignBottom="@+id/tourist_insert_price"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
